--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "cordova-plugin-battery-status",
-  "version": "1.2.4-dev",
-  "description": "Cordova Battery Plugin",
+  "name": "phonegap-plugin-battery-status",
+  "version": "1.0.0",
+  "description": "Phonegap Battery Plugin",
   "types": "./types/index.d.ts",
   "cordova": {
-    "id": "cordova-plugin-battery-status",
+    "id": "phonegap-plugin-battery-status",
     "platforms": [
       "android",
       "ios"
@@ -12,20 +12,20 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/apache/cordova-plugin-battery-status"
+    "url": "https://github.com/phonegap/phonegap-plugin-battery-status"
   },
   "keywords": [
-    "cordova",
+    "phonegap",
     "battery",
     "ecosystem:cordova",
-    "cordova-android",
-    "cordova-ios"
+    "phonegap-android",
+    "phonegap-ios"
   ],
   "scripts": {
     "test": "npm run jshint",
     "jshint": "node node_modules/jshint/bin/jshint www && node node_modules/jshint/bin/jshint src && node node_modules/jshint/bin/jshint tests"
   },
-  "author": "Apache Software Foundation",
+  "author": "The Phonegap Team",
   "license": "Apache-2.0",
   "engines": {
     "cordovaDependencies": {
