--- a/plugin.xml
+++ b/plugin.xml
@@ -1,48 +1,22 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!--
-  Licensed to the Apache Software Foundation (ASF) under one
-  or more contributor license agreements.  See the NOTICE file
-  distributed with this work for additional information
-  regarding copyright ownership.  The ASF licenses this file
-  to you under the Apache License, Version 2.0 (the
-  "License"); you may not use this file except in compliance
-  with the License.  You may obtain a copy of the License at
-
-    http://www.apache.org/licenses/LICENSE-2.0
-
-  Unless required by applicable law or agreed to in writing,
-  software distributed under the License is distributed on an
-  "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
-  KIND, either express or implied.  See the License for the
-  specific language governing permissions and limitations
-  under the License.
--->
-
-<plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
-      id="phonegap-plugin-battery-status"
-      version="0.0.1">
-    <name>Battery</name>
-    <description>PhoneGap Battery Plugin</description>
-    <license>Apache 2.0</license>
-    <keywords>cordova,battery</keywords>
-    <repo>https://github.com/phonegap/phonegap-plugin-battery-status.git</repo>
-    <issue>https://github.com/phonegap/phonegap-plugin-battery-status/issues</issue>
-
-
-    <dependency id="es6-promise-plugin"/>
-
-    <!-- ios -->
-    <platform name="ios">
-        <config-file target="config.xml" parent="/*">
-            <feature name="Battery">
-                <param name="ios-package" value="CDVBattery" />
-            </feature>
-        </config-file>
-        <js-module src="www/battery.js" name="battery">
-            <clobbers target="navigator.getBattery" />
-        </js-module>
-        <header-file src="src/ios/CDVBattery.h" />
-	    <source-file src="src/ios/CDVBattery.m" />
-    </platform>
-
+<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
+<plugin xmlns="http://apache.org/cordova/ns/plugins/1.0" id="phonegap-plugin-battery-status" version="1.0.0">
+  <name>Battery</name>
+  <description>PhoneGap Battery Plugin</description>
+  <license>Apache 2.0</license>
+  <keywords>cordova,battery</keywords>
+  <repo>https://github.com/phonegap/phonegap-plugin-battery-status.git</repo>
+  <issue>https://github.com/phonegap/phonegap-plugin-battery-status/issues</issue>
+  <dependency id="es6-promise-plugin"/>
+  <platform name="ios">
+    <config-file target="config.xml" parent="/*">
+      <feature name="Battery">
+        <param name="ios-package" value="CDVBattery"/>
+      </feature>
+    </config-file>
+    <js-module src="www/battery.js" name="battery">
+      <clobbers target="navigator.getBattery"/>
+    </js-module>
+    <header-file src="src/ios/CDVBattery.h"/>
+    <source-file src="src/ios/CDVBattery.m"/>
+  </platform>
 </plugin>
