--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "id": "phonegap-plugin-battery-status",
     "platforms": [
       "android",
-      "ios"
+      "ios",
+      "windows"
     ]
   },
   "repository": {
@@ -19,7 +20,8 @@
     "battery",
     "ecosystem:cordova",
     "cordova-android",
-    "cordova-ios"
+    "cordova-ios",
+    "cordova-windows"
   ],
   "scripts": {
     "test": "npm run jshint",
