--- a/plugin.xml
+++ b/plugin.xml
@@ -7,16 +7,21 @@
   <repo>https://github.com/phonegap/phonegap-plugin-battery-status.git</repo>
   <issue>https://github.com/phonegap/phonegap-plugin-battery-status/issues</issue>
   <dependency id="es6-promise-plugin"/>
+  <js-module src="www/battery.js" name="battery">
+      <clobbers target="navigator.getBattery"/>
+  </js-module>
   <platform name="ios">
     <config-file target="config.xml" parent="/*">
       <feature name="Battery">
         <param name="ios-package" value="CDVBattery"/>
       </feature>
     </config-file>
-    <js-module src="www/battery.js" name="battery">
-      <clobbers target="navigator.getBattery"/>
-    </js-module>
     <header-file src="src/ios/CDVBattery.h"/>
     <source-file src="src/ios/CDVBattery.m"/>
+  </platform>
+  <platform name="windows">
+        <js-module src="src/windows/BatteryProxy.js" name="BatteryProxy">
+         <merges target="" />
+        </js-module>
   </platform>
 </plugin>
